--- a/src/components/SearchInput/searchinput.module.scss
+++ b/src/components/SearchInput/searchinput.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .search-container {
     margin: auto;
     display: flex;
@@ -11,11 +13,7 @@
         justify-content: space-between;
         height: 40px;
         padding: 0.2rem 0.75rem;
-        background: rgba( 255, 255, 255, 0.2 );
-        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.17 );
-        backdrop-filter: blur( 4px );
-        -webkit-backdrop-filter: blur( 4px );
-        border: 1px solid rgba( 255, 255, 255, 0.18 );
+        @include glassmorphic;
 
         input[type="text"] {
             color: whitesmoke;
