--- a/src/components/WeatherCard/weatherCard.module.scss
+++ b/src/components/WeatherCard/weatherCard.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .card {
     max-height: 480px;
     max-width: 380px;
@@ -5,14 +7,8 @@
     border: 1px solid whitesmoke;
     border-radius: 1rem;
     padding: 2rem;
-
-    // This hype glassmorphic effect... for how long the hype ???
-    background: rgba( 255, 255, 255, 0.2 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.17 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
     border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    @include glassmorphic;
 
     &__header {
         display: flex;
